--- a/frontend/src/assets/pages/Home.module.css
+++ b/frontend/src/assets/pages/Home.module.css
@@ -32,8 +32,7 @@
   color: var(--btn-text, #fff);
 
   /* pulled up under the header (ensure --navbar-height is used by header) */
-  margin-top: calc(-1 * var(--navbar-height, 5rem));
-  padding-top: calc(80px + var(--navbar-height, 5rem));
+  padding-top: 90px;
   min-height: 350px;
   padding-bottom: 64px;
   text-align: center;
